// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cart view Renders correctly 1`] = `
<div>
  <div
    class="min-h-screen flex flex-col text-brand-black"
  >
    <div
      class="bg-white z-10"
    >
      <header
        class="relative bg-white"
      >
        <nav
          aria-label="Top"
          class="max-w-7xl mx-auto px-4 md:px-6 xl:px-8"
        >
          <div
            class="h-16 mt-0.5 flex items-center justify-between border-b border-brand-grey-whisper"
          >
            <div
              class="flex-1 flex items-center xl:hidden"
            >
              <button
                class="-ml-2 bg-white p-2 rounded-md text-gray-400"
                data-testid="button-open"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  Open menu
                </span>
                <svg
                  aria-hidden="true"
                  class="h-6 w-6"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 6h16M4 12h16M4 18h16"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </button>
            </div>
            <div
              class="hidden xl:flex-1 xl:block xl:self-stretch"
            >
              <div
                class="h-full flex space-x-8"
              />
            </div>
            <a
              class="flex h-full items-center pl-2 pr-2"
              href="//www.60beans.de"
            >
              <span
                class="sr-only"
              >
                60beans
              </span>
              <img
                alt="60beans"
                class="h-6"
                src="60beans-black.svg"
              />
            </a>
            <div
              class="flex-1 flow-root flex h-full items-center"
            >
              <div
                class="flex-1 flex h-full items-center justify-end xl:flex-none"
              >
                <div
                  class="hidden h-full xl:flex space-x-8 justify-end"
                >
                  <a
                    class="flex items-center text-gray-700 hover:text-gray-800"
                    href="//www.60beans.de/uber-uns"
                  >
                    <span
                      class="uppercase text-sm leading-5"
                    >
                      Über uns
                    </span>
                  </a>
                </div>
                <div
                  class="ml-4 flow-root xl:ml-6"
                >
                  <a
                    class="group -m-2 p-2 flex items-center"
                    href="/cart"
                  >
                    <svg
                      aria-hidden="true"
                      class="flex-shrink-0 h-6 w-6 text-gray-400 group-hover:text-gray-500"
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                    <span
                      class="ml-2 text-sm font-medium text-gray-700 group-hover:text-gray-800"
                    >
                      1
                    </span>
                    <span
                      class="sr-only"
                    >
                      items in cart, view bag
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </header>
    </div>
    <main
      class="flex flex-grow w-full items-start justify-center bg-white mt-4 mb-4"
    >
      <div
        class="w-full max-w-7xl mx-auto px-6 xl:px-8"
      >
        <h1
          class="mb-4 text-2xl leading-8 font-semibold"
        >
          Dein Warenkorb
        </h1>
        <div
          class="grid gap-2 grid-cols-1"
        >
          <div
            class="flex w-full md:grid-flow-col-dense md:columns-2 pb-6 border-b border-coreUI-border mb-4"
          >
            <div
              class="shrink-0"
            >
              <a
                href="/product/7655228866776"
              >
                <img
                  alt="Cycle Blend"
                  class="w-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
              </a>
            </div>
            <div
              class="flex flex-1 flex-col justify-between justify-items-start md:grid-flow-col-dense md:columns-3 md:flex-row md:items-center"
            >
              <div>
                <div
                  class="mb-1.5 md:mb-0 text-base leading-6 font-semibold"
                >
                  Cycle Blend
                </div>
                <div>
                  <span
                    class="text-coreUI-text-secondary text-base leading-6"
                  >
                    250g | 
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-base leading-6"
                  >
                    Ganze Bohne
                  </span>
                </div>
              </div>
              <div>
                <span
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  7,20 €
                </span>
                <span
                  class="text-coreUI-text-secondary ml-1 text-base leading-6"
                >
                  (
                  28,80 €
                  /kg)
                </span>
              </div>
              <span
                class="md:hidden"
              />
              <div>
                <div
                  class="inline-flex justify-between px-4 py-2 text-left bg-white rounded-full border border-coreUI-text-tertiary cursor-default w-32"
                  data-testid="quantity-select"
                >
                  <button
                    data-testid="quantity-minus"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="w-5 h-5"
                      fill="currentColor"
                      viewBox="0 0 20 20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                  <div
                    class="px-4"
                    data-testid="quantity-value"
                  >
                    1
                  </div>
                  <button
                    data-testid="quantity-plus"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="w-5 h-5"
                      fill="currentColor"
                      viewBox="0 0 20 20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                </div>
                <button
                  class="ml-4 inline-flex items-center px-4 py-2.5 w-fit rounded-full border border-coreUI-text-tertiary"
                  data-testid="button-cart-item-remove"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="h-5 w-5"
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
          <div
            class="flex w-full md:grid-flow-col-dense md:columns-2 pb-6 border-b border-coreUI-border"
          >
            <div
              class="shrink-0"
            >
              <a
                href="/product/23232323"
              >
                <img
                  alt="60beans"
                  class="w-32"
                  src="https://cdn.shopify.com/s/files/1/0632/7251/7848/products/ezgif-4-d921ab2e2b.png?v=1649246153"
                />
              </a>
            </div>
            <div
              class="flex flex-1 flex-col justify-between justify-items-start md:grid-flow-col-dense md:columns-3 md:flex-row md:items-center"
            >
              <div>
                <div
                  class="mb-1.5 md:mb-0 text-base leading-6 font-semibold"
                >
                  60beans
                </div>
                <div>
                  <span
                    class="text-coreUI-text-secondary text-base leading-6"
                  >
                    1000g | 
                  </span>
                  <span
                    class="text-coreUI-text-secondary text-base leading-6"
                  >
                    Ganze Bohne
                  </span>
                </div>
              </div>
              <div>
                <span
                  class="text-coreUI-text-secondary text-base leading-6"
                >
                  7,20 €
                </span>
                <span
                  class="text-coreUI-text-secondary ml-1 text-base leading-6"
                >
                  (
                  7,20 €
                  /kg)
                </span>
              </div>
              <span
                class="md:hidden"
              />
              <div>
                <div
                  class="inline-flex justify-between px-4 py-2 text-left bg-white rounded-full border border-coreUI-text-tertiary cursor-default w-32"
                  data-testid="quantity-select"
                >
                  <button
                    data-testid="quantity-minus"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="w-5 h-5"
                      fill="currentColor"
                      viewBox="0 0 20 20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M3 10a1 1 0 011-1h12a1 1 0 110 2H4a1 1 0 01-1-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                  <div
                    class="px-4"
                    data-testid="quantity-value"
                  >
                    2
                  </div>
                  <button
                    data-testid="quantity-plus"
                    type="button"
                  >
                    <svg
                      aria-hidden="true"
                      class="w-5 h-5"
                      fill="currentColor"
                      viewBox="0 0 20 20"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        clip-rule="evenodd"
                        d="M10 3a1 1 0 011 1v5h5a1 1 0 110 2h-5v5a1 1 0 11-2 0v-5H4a1 1 0 110-2h5V4a1 1 0 011-1z"
                        fill-rule="evenodd"
                      />
                    </svg>
                  </button>
                </div>
                <button
                  class="ml-4 inline-flex items-center px-4 py-2.5 w-fit rounded-full border border-coreUI-text-tertiary"
                  data-testid="button-cart-item-remove"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    class="h-5 w-5"
                    fill="none"
                    stroke="currentColor"
                    stroke-width="2"
                    viewBox="0 0 24 24"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M19 7l-.867 12.142A2 2 0 0116.138 21H7.862a2 2 0 01-1.995-1.858L5 7m5 4v6m4-6v6m1-10V4a1 1 0 00-1-1h-4a1 1 0 00-1 1v3M4 7h16"
                      stroke-linecap="round"
                      stroke-linejoin="round"
                    />
                  </svg>
                </button>
              </div>
            </div>
          </div>
        </div>
        <div
          class="grid justify-items-start md:justify-items-end mt-6"
        >
          <span
            class="uppercase text-coreUI-text-secondary text-xs leading-4"
          >
            Zwischensumme
          </span>
          <span
            class="mr-1 text-2xl leading-8 font-semibold"
          >
            10,00 €
          </span>
          <div
            class="text-coreUI-text-secondary text-xs leading-4"
          >
            Preise inkl. MwSt.
          </div>
        </div>
        <div
          class="grid gap-4 grid-cols-1 md:flex md:justify-end my-6"
        >
          <div
            class="grid md:order-2 justify-items-end"
          >
            <a
              class="flex w-full md:w-max"
              data-testid="goToCheckout"
              href="https://famousroasters.myshopify.com/cart/c/123456789"
            >
              <button
                class="flex w-full justify-center inline-flex items-center rounded-full border-2 px-4 py-2 text-base font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
                role="button"
                type="button"
              >
                Zur Kasse
              </button>
            </a>
          </div>
          <div
            class="grid md:order-1 push justify-items-start"
          >
            <a
              class="flex w-full md:w-max"
              href="/catalogue"
            >
              <button
                class="flex w-full justify-center inline-flex items-center rounded-full border-2 px-4 py-2 text-base font-bold text-white bg-brand-black border-transparent hover:bg-coreUI-text-secondary active:bg-brand-black"
                data-testid="continueShopping"
                role="button"
                type="button"
              >
                Weiter einkaufen
              </button>
            </a>
          </div>
        </div>
      </div>
    </main>
    <footer
      class="bg-brand-black text-base text-white py-10"
    >
      <div
        class="w-full max-w-7xl mx-auto mb-10 flex flex-col md:flex-row md:items-center justify-start mx-auto px-8 xl:px-10"
      >
        <div
          class="mb-2 md:mb-0 md:mr-2"
        >
          <svg
            fill="none"
            height="157"
            viewBox="0 0 627 627"
            width="157"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="313.5"
              cy="313.5"
              fill="#D4FF81"
              r="313.5"
            />
            <path
              clip-rule="evenodd"
              d="M361.926 223.428C378.319 223.428 391.608 210.139 391.608 193.747C391.608 177.354 378.319 164.065 361.926 164.065C345.533 164.065 332.244 177.354 332.244 193.747C332.244 210.139 345.533 223.428 361.926 223.428ZM342.734 463.065C389.465 463.065 427.078 428.871 427.078 360.485V357.445C427.078 289.439 389.465 254.485 343.114 254.485C313.1 254.485 292.584 270.442 281.186 289.439V172.421H213.18V458.506H281.186V427.732C291.064 449.007 313.1 463.065 342.734 463.065ZM370.229 358.777C370.229 382.382 351.093 401.518 327.488 401.518C303.882 401.518 284.746 382.382 284.746 358.777C284.746 335.171 303.882 316.035 327.488 316.035C351.093 316.035 370.229 335.171 370.229 358.777Z"
              fill="#212121"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="px-4 text-5xl leading-none"
        >
          A pleasure for every taste.
        </div>
      </div>
      <div
        class="w-full max-w-7xl mx-auto grid gap-2 gap-y-10 grid-cols-1 md:grid-cols-2 mx-auto px-12 xl:px-14"
      >
        <div
          class="order-2 md:order-1"
        >
          <ul>
            <li
              class="mt-0"
            >
              <a
                href="/catalogue"
              >
                Shop
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/taste-finder"
              >
                Tastefinder
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="//www.60beans.de/uber-uns"
              >
                Über uns
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="//www.notion.so/Datenschutzhinweise-ad5b45261a964166a74883d2770e28ea"
              >
                Datenschutz-Bestimmungen
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="//slender-petunia-c3c.notion.site/Imprint-33b18fd9e469471ab768eef8155da968"
              >
                Impressum
              </a>
            </li>
          </ul>
        </div>
        <div
          class="order-1 md:order-2"
        >
          <div>
            <div>
              <span
                class="font-syne text-3xl leading-10 font-semibold tracking-tight"
              >
                Kundensupport
              </span>
            </div>
            <div
              class="mt-6"
            >
              <span
                class="text-lg leading-7"
              >
                Fragen? Kommentare? Bedenken? Oder möchtest du uns einfach ein paar schöne Worte senden? Bitte klicke einfach unten rechts auf die Sprechblasen. Unser Team steht dir dort gerne zur Verfügung.
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full max-w-7xl mx-auto text-center mt-10 mx-auto px-12 xl:px-14"
      >
        <span
          class="text-center text-base leading-6"
        >
          © 2022 60beans. Alle Rechte vorbehalten.
        </span>
        <br />
        <span
          class="text-center text-base leading-6"
        >
          Hergestellt mit ❤️ in Berlin.
        </span>
      </div>
    </footer>
  </div>
</div>
`;

exports[`Cart view Renders correctly for no cart id 1`] = `
<div>
  <div
    class="min-h-screen flex flex-col text-brand-black"
  >
    <div
      class="bg-white z-10"
    >
      <header
        class="relative bg-white"
      >
        <nav
          aria-label="Top"
          class="max-w-7xl mx-auto px-4 md:px-6 xl:px-8"
        >
          <div
            class="h-16 mt-0.5 flex items-center justify-between border-b border-brand-grey-whisper"
          >
            <div
              class="flex-1 flex items-center xl:hidden"
            >
              <button
                class="-ml-2 bg-white p-2 rounded-md text-gray-400"
                data-testid="button-open"
                type="button"
              >
                <span
                  class="sr-only"
                >
                  Open menu
                </span>
                <svg
                  aria-hidden="true"
                  class="h-6 w-6"
                  fill="none"
                  stroke="currentColor"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M4 6h16M4 12h16M4 18h16"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  />
                </svg>
              </button>
            </div>
            <div
              class="hidden xl:flex-1 xl:block xl:self-stretch"
            >
              <div
                class="h-full flex space-x-8"
              />
            </div>
            <a
              class="flex h-full items-center pl-2 pr-2"
              href="//www.60beans.de"
            >
              <span
                class="sr-only"
              >
                60beans
              </span>
              <img
                alt="60beans"
                class="h-6"
                src="60beans-black.svg"
              />
            </a>
            <div
              class="flex-1 flow-root flex h-full items-center"
            >
              <div
                class="flex-1 flex h-full items-center justify-end xl:flex-none"
              >
                <div
                  class="hidden h-full xl:flex space-x-8 justify-end"
                >
                  <a
                    class="flex items-center text-gray-700 hover:text-gray-800"
                    href="//www.60beans.de/uber-uns"
                  >
                    <span
                      class="uppercase text-sm leading-5"
                    >
                      Über uns
                    </span>
                  </a>
                </div>
                <div
                  class="ml-4 flow-root xl:ml-6"
                >
                  <a
                    class="group -m-2 p-2 flex items-center"
                    href="/cart"
                  >
                    <svg
                      aria-hidden="true"
                      class="flex-shrink-0 h-6 w-6 text-gray-400 group-hover:text-gray-500"
                      fill="none"
                      stroke="currentColor"
                      stroke-width="2"
                      viewBox="0 0 24 24"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        d="M16 11V7a4 4 0 00-8 0v4M5 9h14l1 12H4L5 9z"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                      />
                    </svg>
                    <span
                      class="ml-2 text-sm font-medium text-gray-700 group-hover:text-gray-800"
                    >
                      1
                    </span>
                    <span
                      class="sr-only"
                    >
                      items in cart, view bag
                    </span>
                  </a>
                </div>
              </div>
            </div>
          </div>
        </nav>
      </header>
    </div>
    <main
      class="flex flex-grow w-full items-start justify-center bg-white mt-4 mb-4"
    >
      <div
        class="w-full max-w-7xl mx-auto px-6 xl:px-8"
      >
        <h1
          class="mb-4 text-2xl leading-8 font-semibold"
        >
          Dein Warenkorb
        </h1>
        <div
          class="mt-4"
        >
          <div
            class="mt-4 flex justify-center text-lg leading-7"
          >
            Dein Warenkorb ist leer
          </div>
          <div
            class="mt-4 flex justify-center"
          >
            <a
              class="flex w-full md:w-max justify-center"
              href="/catalogue"
            >
              <button
                class="flex w-full justify-center inline-flex items-center rounded-full border-2 px-4 py-2 text-base font-bold disabled:bg-brand-grey-whisper disabled:text-coreUI-text-secondary disabled:cursor-not-allowed text-brand-black bg-primary border-transparent hover:bg-brand-green-starship active:bg-primary"
                data-testid="continueShopping"
                role="button"
                type="button"
              >
                Weiter einkaufen
              </button>
            </a>
          </div>
        </div>
      </div>
    </main>
    <footer
      class="bg-brand-black text-base text-white py-10"
    >
      <div
        class="w-full max-w-7xl mx-auto mb-10 flex flex-col md:flex-row md:items-center justify-start mx-auto px-8 xl:px-10"
      >
        <div
          class="mb-2 md:mb-0 md:mr-2"
        >
          <svg
            fill="none"
            height="157"
            viewBox="0 0 627 627"
            width="157"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="313.5"
              cy="313.5"
              fill="#D4FF81"
              r="313.5"
            />
            <path
              clip-rule="evenodd"
              d="M361.926 223.428C378.319 223.428 391.608 210.139 391.608 193.747C391.608 177.354 378.319 164.065 361.926 164.065C345.533 164.065 332.244 177.354 332.244 193.747C332.244 210.139 345.533 223.428 361.926 223.428ZM342.734 463.065C389.465 463.065 427.078 428.871 427.078 360.485V357.445C427.078 289.439 389.465 254.485 343.114 254.485C313.1 254.485 292.584 270.442 281.186 289.439V172.421H213.18V458.506H281.186V427.732C291.064 449.007 313.1 463.065 342.734 463.065ZM370.229 358.777C370.229 382.382 351.093 401.518 327.488 401.518C303.882 401.518 284.746 382.382 284.746 358.777C284.746 335.171 303.882 316.035 327.488 316.035C351.093 316.035 370.229 335.171 370.229 358.777Z"
              fill="#212121"
              fill-rule="evenodd"
            />
          </svg>
        </div>
        <div
          class="px-4 text-5xl leading-none"
        >
          A pleasure for every taste.
        </div>
      </div>
      <div
        class="w-full max-w-7xl mx-auto grid gap-2 gap-y-10 grid-cols-1 md:grid-cols-2 mx-auto px-12 xl:px-14"
      >
        <div
          class="order-2 md:order-1"
        >
          <ul>
            <li
              class="mt-0"
            >
              <a
                href="/catalogue"
              >
                Shop
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="/taste-finder"
              >
                Tastefinder
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="//www.60beans.de/uber-uns"
              >
                Über uns
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="//www.notion.so/Datenschutzhinweise-ad5b45261a964166a74883d2770e28ea"
              >
                Datenschutz-Bestimmungen
              </a>
            </li>
            <li
              class="mt-6"
            >
              <a
                href="//slender-petunia-c3c.notion.site/Imprint-33b18fd9e469471ab768eef8155da968"
              >
                Impressum
              </a>
            </li>
          </ul>
        </div>
        <div
          class="order-1 md:order-2"
        >
          <div>
            <div>
              <span
                class="font-syne text-3xl leading-10 font-semibold tracking-tight"
              >
                Kundensupport
              </span>
            </div>
            <div
              class="mt-6"
            >
              <span
                class="text-lg leading-7"
              >
                Fragen? Kommentare? Bedenken? Oder möchtest du uns einfach ein paar schöne Worte senden? Bitte klicke einfach unten rechts auf die Sprechblasen. Unser Team steht dir dort gerne zur Verfügung.
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="w-full max-w-7xl mx-auto text-center mt-10 mx-auto px-12 xl:px-14"
      >
        <span
          class="text-center text-base leading-6"
        >
          © 2022 60beans. Alle Rechte vorbehalten.
        </span>
        <br />
        <span
          class="text-center text-base leading-6"
        >
          Hergestellt mit ❤️ in Berlin.
        </span>
      </div>
    </footer>
  </div>
</div>
`;
